--- a/.i3/config
+++ b/.i3/config
@@ -36,7 +36,8 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec "rofi -modi combi,window -show combi -combi-modi run,drun,window"
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -171,3 +172,6 @@ bindcode $mod+Shift+105 exec ~/.config/i3blocks/keyboard_layout -s ; exec pkill 
 bar {
         status_command i3blocks
 }
+
+## lock
+exec --no-startup-id /usr/bin/xss-lock -- /usr/bin/i3lock -c 000000
